k8s/apps/trmnl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trmnl-laravel
  labels:
    app: trmnl-laravel
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: trmnl
  template:
    metadata:
      name: trmnl-laravel
      labels:
        app.kubernetes.io/name: trmnl
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      containers:
        - name: trmnl-laravel
          image: ghcr.io/usetrmnl/byos_laravel:0.28.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - mountPath: /var/www/html/database/storage
              name: trmnl-data
              subPath: database
            - mountPath: /var/www/html/storage/app/public/images/generated
              name: trmnl-data
              subPath: generated_images
      volumes:
        - name: trmnl-data
          persistentVolumeClaim:
            claimName: trmnl-data-pvc
